{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 121,
  "lineage": "401db4f8-74b6-a08e-6cd1-d0f44d8eafdc",
  "resources": [
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075a8631356730dfa",
            "arn": "arn:aws:ec2:us-east-1:730335325551:elastic-ip/eipalloc-075a8631356730dfa",
            "domain": "vpc",
            "id": "eipalloc-075a8631356730dfa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-206-42-185.compute-1.amazonaws.com",
            "public_ip": "18.206.42.185",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335325551:internet-gateway/igw-01e3cf10c1571e30b",
            "id": "igw-01e3cf10c1571e30b",
            "owner_id": "730335325551",
            "tags": {
              "Environment": "Production",
              "Name": "vpc_igw",
              "Team": "DevOps"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "vpc_igw",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-01c6958a7334cc36f"
          },
          "dependencies": [
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks_nat_gw",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075a8631356730dfa",
            "association_id": "eipassoc-03351142af5522b4d",
            "connectivity_type": "public",
            "id": "nat-02594ff008d14da54",
            "network_interface_id": "eni-046e6fc27272ac850",
            "private_ip": "10.0.1.59",
            "public_ip": "18.206.42.185",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03a159791530b6361",
            "tags": {
              "Name": "Natty GW"
            },
            "tags_all": {
              "Name": "Natty GW"
            }
          },
          "dependencies": [
            "module.eks-module.aws_eip.nat_eip",
            "module.eks-module.aws_internet_gateway.eks_igw",
            "module.eks-module.aws_subnet.pub_one",
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnet_nat_gateway_route",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-032f05997dd3348c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02594ff008d14da54",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032f05997dd3348c7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-module.aws_eip.nat_eip",
            "module.eks-module.aws_internet_gateway.eks_igw",
            "module.eks-module.aws_nat_gateway.eks_nat_gw",
            "module.eks-module.aws_route_table.private_subnet_route_table",
            "module.eks-module.aws_subnet.pub_one",
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_subnet_internet_gateway_route",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01e3cf10c1571e30b",
            "id": "r-rtb-0a3a4987a4f462b051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a3a4987a4f462b05",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-module.aws_internet_gateway.eks_igw",
            "module.eks-module.aws_route_table.public_subnet_route_table",
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_route_table",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335325551:route-table/rtb-032f05997dd3348c7",
            "id": "rtb-032f05997dd3348c7",
            "owner_id": "730335325551",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "My VPC Private Subnet Route Table"
            },
            "tags_all": {
              "Name": "My VPC Private Subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6958a7334cc36f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_route_table",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335325551:route-table/rtb-0a3a4987a4f462b05",
            "id": "rtb-0a3a4987a4f462b05",
            "owner_id": "730335325551",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public Subnet Route Table"
            },
            "tags_all": {
              "Name": "Public Subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c6958a7334cc36f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route_table_association",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0933c31b6ce833dc6",
            "route_table_id": "rtb-032f05997dd3348c7",
            "subnet_id": "subnet-0c4c49d26b6ee613d"
          },
          "dependencies": [
            "module.eks-module.aws_route_table.private_subnet_route_table",
            "module.eks-module.aws_subnet.priv_one",
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route_table_association_2",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a6d3643123589db",
            "route_table_id": "rtb-032f05997dd3348c7",
            "subnet_id": "subnet-0d16138a237234069"
          },
          "dependencies": [
            "module.eks-module.aws_route_table.private_subnet_route_table",
            "module.eks-module.aws_subnet.priv_two",
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table_association",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094e616050dd26e51",
            "route_table_id": "rtb-0a3a4987a4f462b05",
            "subnet_id": "subnet-03a159791530b6361"
          },
          "dependencies": [
            "module.eks-module.aws_route_table.public_subnet_route_table",
            "module.eks-module.aws_subnet.pub_one",
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table_association_2",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa0ede176fddc6fc",
            "route_table_id": "rtb-0a3a4987a4f462b05",
            "subnet_id": "subnet-0924b25546ee319ed"
          },
          "dependencies": [
            "module.eks-module.aws_route_table.public_subnet_route_table",
            "module.eks-module.aws_subnet.pub_two",
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_one",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335325551:subnet/subnet-0c4c49d26b6ee613d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4c49d26b6ee613d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335325551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet one"
            },
            "tags_all": {
              "Name": "Private Subnet one"
            },
            "vpc_id": "vpc-01c6958a7334cc36f"
          },
          "dependencies": [
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_two",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335325551:subnet/subnet-0d16138a237234069",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d16138a237234069",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335325551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet two"
            },
            "tags_all": {
              "Name": "Private Subnet two"
            },
            "vpc_id": "vpc-01c6958a7334cc36f"
          },
          "dependencies": [
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_one",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335325551:subnet/subnet-03a159791530b6361",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a159791530b6361",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335325551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub Subnet One"
            },
            "tags_all": {
              "Name": "Pub Subnet One"
            },
            "vpc_id": "vpc-01c6958a7334cc36f"
          },
          "dependencies": [
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_two",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335325551:subnet/subnet-0924b25546ee319ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0924b25546ee319ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335325551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub Subnet two"
            },
            "tags_all": {
              "Name": "Pub Subnet two"
            },
            "vpc_id": "vpc-01c6958a7334cc36f"
          },
          "dependencies": [
            "module.eks-module.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "module.eks-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335325551:vpc/vpc-01c6958a7334cc36f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04133f8f389d8e472",
            "default_route_table_id": "rtb-006aeecbf1b880fcb",
            "default_security_group_id": "sg-0d129d1319f754869",
            "dhcp_options_id": "dopt-0d67f7bf47c7efe36",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c6958a7334cc36f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006aeecbf1b880fcb",
            "owner_id": "730335325551",
            "tags": {
              "Environment": "Production",
              "Name": "main_vpc",
              "Team": "DevOps"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "main_vpc",
              "Team": "DevOps"
            }
          }
        }
      ]
    }
  ]
}